--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <label class="custom-checkbox">
                 <input type="checkbox" id="telegramCheckbox" disabled>
                 <span class="checkbox-label">
-                    Join our <a class="telegram" href="https://t.me/vistapay" target="_blank">Telegram</a>
+                    Join our <a class="telegram" href="https://telegram.me/vistapay" target="_blank">Telegram</a>
                 </span>
             </label>
 
