--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,25 +6,27 @@
     <link rel="shortcut icon" href="https://vistapay.io/Main/m128/images/favicon.png" />
     <title>Claim Tokens</title>
     <link rel="stylesheet" href="style.css">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.0/web3.min.js"></script>
 </head>
 <body>
-
     <div id="toast" class="toast">
         <img id="toast-icon" src="" alt="" style="vertical-align: middle;"/>
         <span id="toast-message">Error message here</span>
     </div>
 
-    
     <div class="container">
         <h1>You will get 200 VISTAPAY Tokens</h1>
         <hr>
         <div id="contract_details">
             <p class="status">Airdrop status: <span id="airdrop_active">Wallet not connected</span></p>
+            <p class="user_link" id="self_click">Your Referral Link:<BR> <span id="referral_link"></span></p>
+            <p class="user_link" >Referred By: <span id="referred_by">None</span></p>
+        </div>
+        <div class="requirements">
+            <!-- Existing requirements -->
         </div>
         <div class="options">
-            <button class="option-button" id="claim_btn" >CLAIM NOW</button>
+            <button class="option-button" id="claim_btn">CLAIM NOW</button>
         </div>
     </div>
 
